--- a/app/src/main/res/layout/fragment_inventory_creation.xml
+++ b/app/src/main/res/layout/fragment_inventory_creation.xml
@@ -71,7 +71,7 @@
                     android:id="@+id/actvAmountUnit"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:inputType="text" />
+                    android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
