config toolbar of ShoppingFragment

--- a/app/src/main/res/menu/menu_shopping_list.xml
+++ b/app/src/main/res/menu/menu_shopping_list.xml
@@ -3,16 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/miFilter"
-        android:title="Filter"
+        android:id="@+id/miSortFilter"
+        android:title="Sort/Filter"
+        android:icon="@drawable/ic_filter"
         app:showAsAction="always" />
-    <item
-        android:id="@+id/miSort"
-        android:title="Sort"
-        app:showAsAction="always" />
-    <item
-        android:id="@+id/miSwitchMode"
-        android:title="shopping mode"
-        app:actionLayout="@layout/switch_item"
-        app:showAsAction="always"></item>
 </menu>
