--- a/app/src/main/res/layout/fragment_shopping.xml
+++ b/app/src/main/res/layout/fragment_shopping.xml
@@ -16,8 +16,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:menu="@menu/menu_shopping_list">
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
+            app:menu="@menu/menu_shopping_list"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary">
         </com.google.android.material.appbar.MaterialToolbar>
     </com.google.android.material.appbar.AppBarLayout>
 
