add SafeArgs dependencies + argument for SortFilterParamsDialog.java

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -100,5 +100,8 @@
                 app:argType="string"
                 app:nullable="true" />
         </action>
+        <argument
+            android:name="containerList"
+            app:argType="string" />
     </dialog>
 </navigation>
