config autocomplete text view

--- a/app/src/main/res/layout/fragment_inventory_creation.xml
+++ b/app/src/main/res/layout/fragment_inventory_creation.xml
@@ -30,14 +30,17 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilFood"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            app:endIconMode="none"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="enter food name">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="text"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
