--- a/app/src/main/res/layout/fragment_shopping_creation.xml
+++ b/app/src/main/res/layout/fragment_shopping_creation.xml
@@ -28,16 +28,26 @@
         android:orientation="vertical"
         android:padding="20dp">
 
+        <com.google.android.material.chip.Chip
+            android:id="@+id/cFood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:closeIconEnabled="true"
+            android:visibility="gone"/>
+
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tilFood"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            app:endIconMode="none"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="enter food name">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <AutoCompleteTextView
+                android:id="@+id/actvFood"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:inputType="text"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
