--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -17,8 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
-            app:menu="@menu/menu_save">
+            style="@style/Widget.MaterialComponents.Toolbar.Primary">
 
         </com.google.android.material.appbar.MaterialToolbar>
 
@@ -50,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -118,10 +117,17 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="Set Time"
-
                     style="@style/Widget.MaterialComponents.Button"/>
 
             </LinearLayout>
+
+            <Button
+                android:id="@+id/btnSaveReminderSettings"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Save reminder preferences"
+                style="@style/Widget.MaterialComponents.Button"/>
 
         </LinearLayout>
 
