--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -35,6 +35,7 @@
             android:orientation="horizontal">
 
             <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/swReminderEnabled"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:checked="false"
@@ -49,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="visible">
+            android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -103,7 +104,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Deliver notification at:"
+                    android:text="Deliver notification at: (24hr)"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
                 <Space
